--- a/exp9 reg form.html
+++ b/exp9 reg form.html
@@ -12,7 +12,7 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="exp9.css">
 
     <script src="script.js" defer></script>
 
@@ -120,5 +120,5 @@
 
  
 
-CSS:
+
 
