--- a/exp 3 biodata.html
+++ b/exp 3 biodata.html
@@ -8,21 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>STUDENT BIO-DATA</title>
-
 </head>
 <body>
 
     <table align="center"
-        style="position:relative;background-color:  aqua; height: 500px;border-radius: 20px;padding: 15px;">
+        style="position:relative;background-color:  aqua; height: 500px;
+        border-radius: 20px;padding: 15px;">
 
         <tr style="position: relative;">
 
-            <td style="padding-left: 70px;"><img src="image1.png" alt=""></td>
+            <td style="padding-left: 70px;">
+                <img src="image1.png" alt="image"></td>
 
         </tr>
 
         <tr>
-
             <td style="padding-left: 80px;">
 
                 <h4>students image</h4>
@@ -42,10 +42,10 @@
         </tr>
 
         <tr>
-
             <td>
 
-                <h4>College name: </h4><input type="text" name="" id="">
+                <h4>College name: </h4>
+                <input type="text" name="" id="">
 
             </td>
 
@@ -131,7 +131,7 @@
 
         <tr>
 
-            <td><a href="https://github.com/20b01a12b6">github.com/20b01a12b6</a></td>
+            <td><a href="https://github.com/Navya69">github.com/Navya69</a></td>
 
         </tr>
 
