--- a/exp 3 biodata.html
+++ b/exp 3 biodata.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>STUDENT BIO-DATA</title>
+    <script src="exp3 valid.js"></script>
 </head>
 <body>
 
@@ -133,6 +134,11 @@
 
             <td><a href="https://github.com/Navya69">github.com/Navya69</a></td>
 
+        </tr>
+        <tr>
+            <td>
+                <button type="submit" id="btn">Submit</button>
+            </td>
         </tr>
 
 
