--- a/exp 3 biodata.html
+++ b/exp 3 biodata.html
@@ -19,7 +19,7 @@
         <tr style="position: relative;">
 
             <td style="padding-left: 70px;">
-                <img src="image1.png" alt="image"></td>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxqtY2QvYo18YpoIYmS_ZGbo3PxIdBpga2AQ&usqp=CAU" alt="image"></td>
 
         </tr>
 
@@ -134,7 +134,7 @@
 
             <td><a href="https://github.com/Navya69">github.com/Navya69</a></td>
 
-        </tr>
+        </tr> <br> 
         <tr>
             <td>
                 <button type="submit" id="btn">Submit</button>
