--- a/exp6  container.html
+++ b/exp6  container.html
@@ -4,13 +4,11 @@
 
     <title>Registration Form</title>
 
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-     -->
+    <link rel="stylesheet" href="exp6.css">
 
-    <link rel="stylesheet" href="form.css">
-
-    <script src="form.js" defer></script>
+    <script src="exp6.js" defer></script>
 
     <script src="https://kit.fontawesome.com/524c3f8c5b.js" crossorigin="anonymous"></script>
 
