modified exp8  file

--- a/exp8 grid.html
+++ b/exp8 grid.html
@@ -1,42 +1,21 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="exp8.css" />
+  </head>
 
-    <head>
+  <body>
+    <nav>
+      <ul>
+        <li id="w"><a href="#">HOME</a></li>
 
-        <link rel="stylesheet" href="exp8.css">
+        <li id="move"><a href="#">DOCS</a></li>
 
-    </head>
+        <li id="m"><a href="#">EXAMPLES</a></li>
 
-    <body>
-
-        <nav >
-
-            <ul>
-
-                <li id="w"><a href="#">HOME</a></li>
-
-                <li id="move" > <a href="#">DOCS</a></li>
-
-                <li id="m"><a href="#">EXAMPLES</a></li>
-
-                <li id="p"><a href="#">CONTACT US</a></li>
-
-               
-
-            </ul>
-
-        </nav>
-
-    </body>
-
+        <li id="p"><a href="#">CONTACT US</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
-
- 
-
- 
-
- 
-
-Css part
-
