--- a/exp9 reg form.html
+++ b/exp9 reg form.html
@@ -1,124 +1,99 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <meta charset="UTF-8">
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="exp9.css">
+    <link rel="stylesheet" href="exp9.css" />
 
-    <script src="script.js" defer></script>
+    <script src="exp3 valid.js" defer></script>
+  </head>
 
-</head>
+  <body style="background-color: aquamarine">
+    <img src="" alt="" srcset="wall paper.jpg" />
 
-<body style="background-color: aquamarine;" >
-
-     <img src="" alt="" srcset="wall paper.jpg">
-
-     <img src="" alt="" srcset="wall paper.jpg ;background-repeat: no-repeat;
+    <img
+      src=""
+      alt=""
+      srcset="wall paper.jpg ;background-repeat: no-repeat;
 
     background-size: cover;
 
     width: 100%;
 
-    height: 100%;">
+    height: 100%;"
+    />
 
-         <h1 align="center" >REGISTRATION FORM</h1>
+    <h1 align="center">REGISTRATION FORM</h1>
 
-        <table align="center">
+    <table align="center">
+      <tr>
+        <td><label>Username :</label></td>
 
-            <tr>
+        <td><input type="text" id="names" /></td>
+      </tr>
 
-                <td><label>Username :</label></td>
+      <tr>
+        <td><label>Password :</label></td>
 
-                <td><input type="text" id="names"></td>
+        <td><input type="password" id="password" /></td>
+      </tr>
 
-            </tr>
+      <tr>
+        <td><label>E Mail id :</label></td>
 
-            <tr>
+        <td><input type="text" id="email" /></td>
+      </tr>
 
-                <td> <label>Password :</label></td>
+      <tr>
+        <td><label>Phone No:</label></td>
 
-                <td> <input type="password" id="password"></td>
+        <td><input type="text" id="number" /></td>
+      </tr>
 
-            </tr>
+      <tr>
+        <td><label>Gender :</label></td>
 
-            <tr>
+        <td>
+          female<input type="radio" id="male" name="kk" />
 
-                <td> <label>E Mail id :</label></td>
+          male<input type="radio" id="female" name="kk" />
+        </td>
+      </tr>
 
-                <td> <input type="text" id="email"></td>
+      <tr>
+        <td><label>Languages :</label></td>
 
-            </tr>
+        <td>
+          English <input type="checkbox" id="eng" />
 
-            <tr>
+          Telugu <input type="checkbox" id="tel" />
 
-                <td> <label>Phone No:</label></td>
+          Hindi <input type="checkbox" id="hin" />
 
-                <td> <input type="text" id="number"></td>
+          Tamil <input type="checkbox" id="tamil" />
+        </td>
+      </tr>
 
-            </tr>
+      <tr>
+        <td><label>Address :</label></td>
 
-           <tr>
+        <td>
+          <textarea name="Address" id="Address"></textarea>
+        </td>
+      </tr>
 
-               <td> <label>Gender :</label></td>
+      <tr>
+        <td></td>
 
-               <td> female<input type="radio" id="male" name="kk">
-
-                male<input type="radio" id="female" name="kk"></td>
-
-           </tr>
-
-         <tr>
-
-             <td><label>Languages :</label></td>
-
-             <td> English <input type="checkbox" id="eng">
-
-                Telugu <input type="checkbox" id="tel">
-
-                Hindi <input type="checkbox" id="hin">
-
-                Tamil <input type="checkbox" id="tamil"></td>
-
-         </tr>
-
-         <tr>
-
-             <td><label>Address :</label></td>
-
-             <td>
-
-                 <textarea name="Address" id="Address"></textarea>
-
-             </td>
-
-           
-
-         </tr>
-
-   <tr>
-
-       <td></td>
-
-       <td><button onclick=callme();>sign in</button></td>
-
-    </tr>
-
-</table>
-
-</body>
-
+        <td><button onclick="callme();">sign in</button></td>
+      </tr>
+    </table>
+  </body>
 </html>
-
- 
-
-
-
