--- a/exp7 cards.html
+++ b/exp7 cards.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="col col-lg-4">
-          <div class="card card card border-primary">
+          <div class="card  border-primary">
             <div class="card-header">
               <div class="card-title h1 text-center">Pro</div>
             </div>
